Feat: user search is enabled now
