# docs/swagger.yaml
@@ -635,6 +635,40 @@ paths:
       summary: Fetches the user feed
       tags:
       - feed
+  /users/search:
+    get:
+      consumes:
+      - application/json
+      description: Searches for users by username
+      parameters:
+      - description: Username to search for
+        in: query
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_Ayushmangit_social_internal_store.User'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Search users
+      tags:
+      - users
 securityDefinitions:
   ApiKeyAuth:
     in: header
